removed the images folder from "src"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="10">
 <tr>
   <td>
-     <img width="150rem" src="images/beachday.png" alt="a pic at the beach">
+     <img width="150rem" src="beachday.png" alt="a pic at the beach">
    </td>
   <td>
     <h1>Neima manour </h1>
